<resources>
    <!--    TODO: Übersetzung auf Englisch-->
    <string name="app_name">Stundenplan Hof</string>
    <string name="lectureEntry">Vorlesung</string>
    <string name="rooms">Räume</string>
    <string name="lecturers">Dozenten</string>
    <string name="filterIcon">FilterIcon</string>
    <string name="calendarSync">Kalender synchronisieren</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="days">Tage</string>
    <string name="lectureInfos">Vorlesungsinformation:</string>
    <string name="lecturer">Dozent</string>
    <string name="chat">Chat</string>
    <string name="modulebook">Modulhandbuch</string>
    <string name="arrowRight">Pfeil nach rechts</string>
    <string name="chatIcon">Chat Icon</string>
    <string name="editIcon">Bearbeitungs Icon</string>
    <string name="mapIcon">Karten Icon</string>
    <string name="call_icon">Call Icon</string>
    <string name="mail_icon">Mail Icon</string>
    <string name="addNoteButton">Add Note Button</string>
    <string name="note">Notiz</string>
    <string name="notes">Notizen</string>
    <string name="nothingToSee">Noch nichts zu sehen</string>
    <string name="edit_note_button">Edit Note Button</string>
    <string name="delete_note_button">Delete Note Button</string>
    <string name="save">Speichern</string>
    <string name="cancel">Abbrechen</string>
    <string name="newNote">Neue Notiz</string>
    <string name="editNote">Notiz bearbeiten</string>
    <string name="backgroundImage">BackgroundImage</string>
    <string name="welcome">Herzlich Willkommen!</string>
    <string name="next_slide_button">next Slide Button</string>
    <string name="welcomeText">Diese App ist in der Vorlesung Smartphone ProgrammierungI entstanden\n\nvon Hannes Steinel</string>
    <string name="nextPageButton">NextPageButton</string>
    <string name="settings">Einstellungen</string>
    <string name="informations">Informationen</string>
    <string name="submit">Bestätigen</string>
    <string name="loadingSchedule">Stundenplan wird geladen</string>
    <string name="app_zur_cksetzen">App zurücksetzen</string>
    <string name="aktualisieren">Aktualisieren</string>
    <string name="loadingLecturer">Dozent wird geladen</string>
    <string name="mailButton">Mail Button</string>
    <string name="phoneButton">phone Button</string>
    <string name="loadingModuleBook">Modulhandbuch wird geladen</string>
    <string name="profilePicture">Profile-Picture</string>
    <string name="lecturerNoData">Keine Dozent Daten vorhanden</string>
    <string name="moduleNoData">Daten sind nicht für dieses Studienjahr vorhanden\noder konnte nicht geladen werden</string>
    <string name="nothingToSeeIcon">nothingToSeeIcon</string>
    <string name="selectAllInSetup">Wählen Sie Ihren Studiengang, das Semester und das Studienjahr</string>
    <string name="loadSemester">Semester werden geladen</string>
    <string name="loadYear">Studienjahre werden geladen</string>
    <string name="room">Raum</string>
    <string name="building">Gebäude</string>
    <string name="floor">Stockwerk</string>
    <string name="coordinates">Koordinaten</string>
    <string name="saveLocation">Standort speichern</string>
    <string name="unknown">Unbekannt</string>
    <string name="loadCoord">GPS-Daten werden geladen. Noch keine Daten vorhanden.</string>
    <string name="permissionGranted">Berechtigung gewährt</string>
    <string name="permissionNotGranted">Berechtigung nicht gewährt</string>
    <string name="locationLoaded">Position gefunden</string>
    <string name="enableLoc">GPS bitte anschalten</string>
    <string name="gpsWasNotEnabled">GPS wurde nicht aktiviert</string>
    <string name="currPos">aktuelle Position</string>
    <string name="virtuel">Virtuell</string>
    <string name="isLoading">wird geladen</string>
    <string name="enable_cancelled_lecture">Ausfälle einblenden</string>
    <string name="errorInSetup">Fehler im Setup aufgetreten</string>
    <string name="errorInDownloadParse">Download oder Parsing fehlgeschlagen</string>
    <string name="changes">Änderungen</string>
    <string name="lecturerInfo">Dozenteninformation</string>
    <string name="chooseEMailService">Wähle einen E-Mail Service:</string>
    <string name="noEMailServiceFound">Kein E-Mail Service gefunden</string>
    <string name="EMailNotFound">E-Mail Adresse nicht vorhanden</string>
    <string name="choosePhoneService">Wähle einen Telefon Service:</string>
    <string name="noPhoneServiceFound">Kein Telefon Service gefunden</string>
    <string name="PhoneNotFound">Telefon Nummer nicht vorhanden</string>
    <string name="alarmbutton">Alarmbutton</string>
    <string name="message">Nachricht</string>
    <string name="sendbutton">sendButton</string>
    <string name="activateAlarm">Alarm aktivieren</string>
    <string name="chooseAlarmTime">Uhrzeit wählen</string>
    <string name="hoursBeforeLecture">Stunde/n vor der Vorlesung</string>
    <string name="logout">Logout</string>
    <string name="successfullLogout">Logout erfolgreich</string>
    <string name="successfullLogin">Login erfolgreich</string>
    <string name="errorLogout">Fehler bei Logout</string>
    <string name="errorLogin">Fehler bei Login</string>
    <string name="noLogin">Nicht eingeloggt</string>
    <string name="latLongAltFormat">%s: Lat:%s Long:%s Alt:%s</string>
    <string name="showDetailLectureIcon">show Detail Lecture Icon</string>
</resources>